--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@types/axios": "^0.14.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
